# drone-agility-challenge

./: Cargo.toml  README.md  keymap.ron
assets/sprites/: drone.kra  drone_blr.kra  drone_blrs.kra  drone_blsr.kra  drone_tl_br.kra  drone_tlr.kra  drone_tlrs.kra  drone_tlsr.kra  drone_tr_bl.kra
src/: cleanup.rs  debug.rs  failed.rs  game.rs  keymap.rs  level_title.rs  main.rs  menu.rs  podium.rs  success.rs  title.rs
src/game/: clock.rs  drone.rs  mod.rs
src/game/levels/: builder_func.rs  l1.rs  l2.rs  l3.rs  mod.rs
src/level/: l1.rs  l2.rs  l3.rs  mod.rs
src/levels/: l1.rs  l2.rs  l3.rs  mod.rs
src/menu/: choose_level.rs  end.rs  failed.rs  level.rs  main.rs  mod.rs  success.rs
src/menus/: end.rs  failed.rs  level.rs  main.rs  mod.rs  success.rs
