[package]
name = "drone_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", features = ["wayland"] }
rand = "0.8"
heron = { version = "1.0.1-rc.1" , features=["2d"]}
bevy_prototype_lyon = "0.4.0"